# DEMA

./: .gitignore  Makefile  README.md  license.txt  tutorial.docx
benchmarks/: latest-report.md  run_benchmark.py  run_benchmark.sh  run_scaling_benchmark.py  run_scaling_benchmark.sh  scaling-report.md
code/internal/: ApplyCustomLayoutTaskFactory.java  CustomLayout.java  CyActivator.java  MyRunnable.java  NormalContext.java  NormalTask.java  wzylayout.java
codebases/cytoscape-plugin-java-modern/: README.md  pom.xml
codebases/cytoscape-plugin-java-modern/fixtures/benchmark-small/: nodes.tsv
codebases/cytoscape-plugin-java-modern/src/main/java/org/aimedlab/dema/benchmark/: DemaCoreCli.java
codebases/cytoscape-plugin-java-modern/src/main/java/org/aimedlab/dema/core/: DemaLayoutEngine.java  DeterministicRng.java  GraphData.java  LayoutParams.java  (+2 more)
codebases/dema-python/: README.md  pyproject.toml  run_layout.py
codebases/dema-python-parallel/: README.md  pyproject.toml  run_layout_parallel.py
codebases/dema-python-parallel/dema_py_parallel/: __init__.py  engine.py  io.py
codebases/dema-python-parallel/fixtures/benchmark-medium/: edges.tsv
codebases/dema-python-parallel/fixtures/benchmark-small/: edges.tsv
codebases/dema-python/dema_py/: __init__.py  engine.py
codebases/dema-python/fixtures/benchmark-medium/: nodes.tsv
codebases/shared/fixtures/: README.md
docs/: dema-migration-notes.md
plugin/data_for_basic_layout/: network.txt
plugin/data_for_group_layout/: node_table.txt
scripts/: check_original_plugin_compat.sh  sync_codebases.sh
(+4 files in other folders)
